istio/03-traffic-control/01-traffic-v1.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-web-traffic-v1
  namespace: traffic-control
spec:
  hosts:
    - nginx-webv1
  http:
    - route:
        - destination:
            host: nginx-webv1
            port:
              number: 8080
