istio/03-traffic-control/02-traffic-v2.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-web-traffic-v2
  namespace: traffic-control
spec:
  hosts:
    - nginx-webv2
  http:
    - route:
        - destination:
            host: nginx-webv2
            port:
              number: 8080
