istio/03-traffic-control/07-traffic-rule-subset.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: nginx-web-rule-subset
  namespace: traffic-control
spec:
  host: nginx-web-all
  subsets:
    - labels:
        server: nginx-webv1
      name: webv1
    - labels:
        server: nginx-webv2
      name: webv2
    - labels:
        server: nginx-web
      name: web
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: nginx-web-rule-subset
  namespace: traffic-control
spec:
  hosts:
    - nginx-web-all
  http:
    - match:
        - headers:
            version:
              exact: v1
      route:
        - destination:
            host: nginx-web-all
            subset: webv1
    - match:
        - headers:
            version:
              exact: v2
      route:
        - destination:
            host: nginx-web-all
            subset: webv2
    - route:
        - destination:
            host: nginx-web-all
            subset: web
